feat: Implementar sincronización carrito invitado-usuario y corregir flujo de pago
- Sincronización automática post-login/registro con alertas
- Fusión de carritos LocalStorage + BD
- Corrección error 405 (GET→POST en MercadoPagoController)
- Habilitación rutas pago para ROLE_CLIENTE
- Fix deserialización JSON (constructor vacío en DTO)
- Optimización alertas de error en login.js
- Limpieza de logs de depuración